...
          value={idNumber}
          onChangeText={(_, text) => setIDNumber(text)}
          mask={idMask}
        />
      </View>
      <Button
        testID="btnNext"
        disabled={!isFormValid}
        onPress={handleNextPressed}
        preset="primary"
        title={btnSubmitLabel}
        style={{ margin: Layout.spacing.lg }}
      />
...
